# cpp_cuda_cmake_learning

./: .gitmodules  CMakeLists.txt  README.md  prepare.sh  start.sh
3rdlibs/: CMakeLists.txt
3rdlibs/mono/: find_mono.cmake
RAII/: CMakeLists.txt  main.cc
RAII/include/: deepcopy.h  file.h  mutex.h  pod.h  rightvalue.h  shared_ptr_outside.h  shared_ptr_used.h  simple_shared_ptr.h  weak_ptr_used.h
RAII/src/: deepcopy.cc  file.cc  mutex.cc  pod.cc  rightvalue.cc  shared_ptr_outside.cc  shared_ptr_used.cc  simple_shared_ptr.cc  weak_ptr_used.cc
async/: CMakeLists.txt  async.cc  ptr  ptr.cc
bound/: CMakeLists.txt  bound.cc
coroutine_use/: CMakeLists.txt
coroutine_use/chat/: chat.cc
coroutine_use/combine_vector/: combine_vector.cc
coroutine_use/dispatcher/: CMakeLists.txt  main.cc
coroutine_use/dispatcher/include/: channel.h  delayed_executable.h  dispatcher_awaiter.h  executor.h  future_awaiter.h  normal_awaiter.h  reader_awaiter.h  result.h  sleep_awaiter.h  task.h  task_awaiter.h  task_promise.h  utils.h  writer_awaiter.h
coroutine_use/functional_seq/: functional_seq.cc
coroutine_use/lazy_example/: lazy_example.cc
coroutine_use/task/: CMakeLists.txt  main.cc
coroutine_use/task/include/: result.h  task.h  task_awaiter.h  task_promise.h  utils.h
coroutine_use/task/src/: utils.cc
crtp/: CMakeLists.txt  crtp.cc
cuda_run/: CMakeLists.txt
cuda_run/other_run/: CMakeLists.txt  cuda_zero_copy.cu
cuda_run/reduce_run/: CMakeLists.txt  reduce_0.cu  reduce_1.cu  reduce_1_shared_memory.cu  reduce_2.cu  reduce_2_no_divergence_branch.cu  reduce_3.cu  reduce_3_no_bank_conflict.cu  reduce_4_add_during_copy_v1.cu  reduce_5_unroll_last_warp.cu
cuda_zero_copy/: CMakeLists.txt  thread_block_grid.cu
designmode/: CMakeLists.txt
engine/: CMakeLists.txt
engine/include/: pch.h
engine/include/core/: assert.h  cgmath.h  log.h
engine/include/geom/: basic_geom.h
engine/src/: geom.cc  main.cc
fast_float_test/: CMakeLists.txt  fast_float_test.cc
folly_use/: CMakeLists.txt
folly_use/coro/: coro.cc
folly_use/move_only/: move_only.cc
folly_use/small_vector/: small_vector.cc
helloworld/: CMakeLists.txt  main.cc  main.h
helloworld/hello/: hello.cc
helloworld/world/: world.cc  world.h
interface/: CMakeLists.txt  main.cc
interface/include/: add.h  sub.h  types.h
interface/src/: add.cc  sub.cc
openmp/: CMakeLists.txt  main.cc
openmp/include/: lock.h  threadpool.h
openmp/src/: lock.cc  threadpool.cc
playground/: task_args.json
polymorphism/: CMakeLists.txt  main.cc
polymorphism/include/: csizeof.h  inheritance.h  rtti.h  sizeof.h  testover.h  virtualfunc.h  virtualmulti.h
polymorphism/src/: csizeof.c  inheritance.cc  rtti.inl  sizeof.cc  testover.cc  virtualfunc.cc  virtualmulti.cc
pthread_atomic_volatile/: CMakeLists.txt  atomic.cc
pythonbind/: CMakeLists.txt  example.cc  example.h  example.pyx  test.py
pythonbind/cmake-cython/: UseCython.cmake
sandbox/: CMakeLists.txt  main.cc
socket/: CMakeLists.txt  epoll_client.cc  epoll_server.cc
stream/: CMakeLists.txt  stream.cc
test/: CMakeLists.txt  catch.h  cgmath.cc  geom.cc
threadpool/: CMakeLists.txt  CObject.h  UTask.h  UThreadPool.h  run.cc
vector/: CMakeLists.txt  vector.cc
