file(GLOB_RECURSE targets ./*.cu)

foreach(var IN LISTS targets)
    get_filename_component(TARGET_NAME "${var}" NAME_WE)
    add_executable(${TARGET_NAME} ${var})
    target_link_libraries(${TARGET_NAME} PRIVATE CUDA::cudart ${CUDA_cublas_LIBRARY})
    if(CMAKE_BUILD_TYPE STREQUAL "Debug")
        target_compile_options(${TARGET_NAME} PRIVATE $<$<COMPILE_LANGUAGE:CUDA>:-G>)
    endif()
endforeach()